# version 0.63
26/10/2020
   - Updated dependency of nimbus-jose-jwt and oauth2-oidc-sdk (diewald)
29/10/2020
   - First introduction of a query reference rewrite (diewald)

# version 0.62.4
24/01/2020
   - Removed salt from config and updated config files (margaretha)
03/02/2020
   - Added an admin API for clearing access token cache (margaretha)
05/02/2020
   - Added a config properties for a long-time access token expiry 
     and excluded refresh tokens for public clients in OAuth2 token 
     responses (margaretha)
   - Removed client authentication from the client deregistration and 
     client-secret reset APIs (margaretha)   
04/03/2020
   - Updated the sample index (diewald)

# version 0.62.3
03/12/2019
   - Implemented pipe extension in the search API (margaretha)
11/12/2019
   - Added errors when requesting VC in caching process (margaretha, 
   resolved #47)
12/12/2019
   - Added support for multiple cq parameters (margaretha, resolved #46)
13/12/2019
   - Handled pipe errors and added tests (margaretha)
19/12/2019
   - Updated create update user-group API (margaretha)
20/12/2019
   - Removed transactional annotations from simple select queries (margaretha)
   - Updated free resource controller (margaretha)
15/01-2020
   - Added additional statistic figures to virtual corpus info API 
     response (margaretha)   
    
# version 0.62.2
17/10/2019
   - Handled vulnerability CVE-2019-17195. (margaretha)
8/11/2019
   - Added user-group name pattern (margaretha, issue #33)
11/11/2019
   - Updated user group service paths and replaced groupId with groupName 
     (margaretha, resolved #33)
12/11/2019
   - Removed UserGroupJson & updated listUserGroups and createUserGroup 
     services (margaretha)
   - Added prefixes to username and groupname parameters in service paths 
     (margaretha, resolved #35)
13/11/2019
   - Added tests for issue #43 (margaretha)
14/11/2019
   - Added client description and URL to list-authorized-clients service 